[package]
name = "url-crawler"
version = "0.1.0"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
license = "MIT"
readme = "README.md"

[dependencies]
url-scraper = { git = "https://github.com/pop-os/url-scraper" }
reqwest = "0.9.2"
chrono = "0.4.6"
failure = "0.1.2"
failure_derive = "0.1.2"
crossbeam-channel = "0.2.6"
bitflags = "1.0.4"
